--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <h2>Usage</h2>
   <p>Add this repo to Helm:</p>
-  <pre><code>helm repo add valkey https://&lt;your-github-username&gt;.github.io/&lt;repo-name&gt;/</code></pre>
+  <pre><code>helm repo add valkey https://mk-raven.github.io/valkey-helm/</code></pre>
 
   <p>Update your local cache:</p>
   <pre><code>helm repo update</code></pre>
